// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot when changing group QR code 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="type"
    >
      "group"
    </div>
    <div
      id="instance"
    >
      {"uuid":"0640ec3b-1bed-4b15-a078-d6e7ec66be12","created":"2023-12-26T01:25:12+00:00","name":"Test Group","display_name":"Test Group","location":"Nowhere","description":null,"plants":2,"archived":false}
    </div>
    <div
      id="new_uuid"
    >
      "07919189-514d-4ec1-a967-8af553dfa7e8"
    </div>
    <div>
      <div
        class="container flex flex-col mx-auto h-screen"
      >
        <div
          class="navbar bg-base-100 mb-4 sticky top-0 z-[99]"
        >
          <div
            class="dropdown justify-start min-w-12"
          >
            <div
              class="btn btn-ghost btn-circle"
              role="button"
              tabindex="0"
            >
              <svg
                class="h-5 w-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <ul
              class="menu menu-md dropdown-content mt-3 z-[99]
                                p-2 shadow bg-base-300 rounded-box w-52"
              tabindex="0"
            >
              <li>
                <a>
                  Overview
                </a>
              </li>
              <li>
                <a>
                  Light mode
                </a>
              </li>
            </ul>
          </div>
          <div
            class="mx-auto shrink min-w-0"
          >
            <div
              class="dropdown dropdown-center w-full"
            >
              <a
                class="btn btn-ghost w-full px-0 text-nowrap"
                role="button"
                tabindex="0"
              >
                <span
                  class="px-4 leading-[2.75rem] truncate"
                  style="font-size: 14px;"
                >
                  Test Group
                </span>
              </a>
              <div
                class="dropdown-content z-[1] flex"
                tabindex="0"
              >
                <div
                  class="card card-compact w-72 p-2 mt-2 mx-auto
                                     shadow bg-neutral text-neutral-content"
                >
                  <div
                    class="card-body"
                  >
                    <p
                      class="flex"
                    >
                      <span
                        class="font-semibold"
                      >
                        Location:
                      </span>
                      <span
                        class="ml-auto text-right"
                      >
                        Nowhere
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="justify-end min-w-12"
          />
        </div>
        <div
          class="flex flex-col gap-8 text-center my-auto"
        >
          <p
            class="text-lg font-bold"
          >
            Is this the new QR code for your 
            group
            ?
          </p>
          <div
            class="flex gap-4 mx-auto mb-8"
          >
            <button
              class="btn btn-error btn-square text-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark h-6 w-6"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              class="btn btn-success btn-square text-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check h-6 w-6"
                data-icon="check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <dialog
        class="modal"
      >
        <div
          class="modal-box text-center flex flex-col pt-4 "
        >
          <form
            method="dialog"
          >
            <button
              class="btn-close absolute right-4 top-4"
            >
              <svg
                aria-hidden="true"
                class="w-8 h-8"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
                />
              </svg>
            </button>
          </form>
        </div>
        <form
          class="modal-backdrop"
          method="dialog"
        >
          <button>
            close
          </button>
        </form>
      </dialog>
    </div>
  </body>,
  "container": <div>
    <div
      class="container flex flex-col mx-auto h-screen"
    >
      <div
        class="navbar bg-base-100 mb-4 sticky top-0 z-[99]"
      >
        <div
          class="dropdown justify-start min-w-12"
        >
          <div
            class="btn btn-ghost btn-circle"
            role="button"
            tabindex="0"
          >
            <svg
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <ul
            class="menu menu-md dropdown-content mt-3 z-[99]
                                p-2 shadow bg-base-300 rounded-box w-52"
            tabindex="0"
          >
            <li>
              <a>
                Overview
              </a>
            </li>
            <li>
              <a>
                Light mode
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mx-auto shrink min-w-0"
        >
          <div
            class="dropdown dropdown-center w-full"
          >
            <a
              class="btn btn-ghost w-full px-0 text-nowrap"
              role="button"
              tabindex="0"
            >
              <span
                class="px-4 leading-[2.75rem] truncate"
                style="font-size: 14px;"
              >
                Test Group
              </span>
            </a>
            <div
              class="dropdown-content z-[1] flex"
              tabindex="0"
            >
              <div
                class="card card-compact w-72 p-2 mt-2 mx-auto
                                     shadow bg-neutral text-neutral-content"
              >
                <div
                  class="card-body"
                >
                  <p
                    class="flex"
                  >
                    <span
                      class="font-semibold"
                    >
                      Location:
                    </span>
                    <span
                      class="ml-auto text-right"
                    >
                      Nowhere
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="justify-end min-w-12"
        />
      </div>
      <div
        class="flex flex-col gap-8 text-center my-auto"
      >
        <p
          class="text-lg font-bold"
        >
          Is this the new QR code for your 
          group
          ?
        </p>
        <div
          class="flex gap-4 mx-auto mb-8"
        >
          <button
            class="btn btn-error btn-square text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark h-6 w-6"
              data-icon="xmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            class="btn btn-success btn-square text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check h-6 w-6"
              data-icon="check"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="w-8 h-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App matches snapshot when changing plant QR code 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="type"
    >
      "plant"
    </div>
    <div
      id="instance"
    >
      {"uuid":"0640ec3b-1bed-4b15-a078-d6e7ec66be12","created":"2023-12-26T01:25:12+00:00","name":"Test Plant","display_name":"Test Plant","species":"Calathea","thumbnail":"/media/thumbnails/photo_thumb.jpg","pot_size":4,"description":"This is a plant with a long description","last_watered":"2024-03-01T05:45:44+00:00","last_fertilized":"2024-03-01T05:45:44+00:00","archived":false}
    </div>
    <div
      id="new_uuid"
    >
      "07919189-514d-4ec1-a967-8af553dfa7e8"
    </div>
    <div>
      <div
        class="container flex flex-col mx-auto h-screen"
      >
        <div
          class="navbar bg-base-100 mb-4 sticky top-0 z-[99]"
        >
          <div
            class="dropdown justify-start min-w-12"
          >
            <div
              class="btn btn-ghost btn-circle"
              role="button"
              tabindex="0"
            >
              <svg
                class="h-5 w-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <ul
              class="menu menu-md dropdown-content mt-3 z-[99]
                                p-2 shadow bg-base-300 rounded-box w-52"
              tabindex="0"
            >
              <li>
                <a>
                  Overview
                </a>
              </li>
              <li>
                <a>
                  Light mode
                </a>
              </li>
            </ul>
          </div>
          <div
            class="mx-auto shrink min-w-0"
          >
            <div
              class="dropdown dropdown-center w-full"
            >
              <a
                class="btn btn-ghost w-full px-0 text-nowrap"
                role="button"
                tabindex="0"
              >
                <span
                  class="px-4 leading-[2.75rem] truncate"
                  style="font-size: 14px;"
                >
                  Test Plant
                </span>
              </a>
              <div
                class="dropdown-content z-[1] flex"
                tabindex="0"
              >
                <div
                  class="card card-compact w-72 p-2 mt-2 mx-auto
                                     shadow bg-neutral text-neutral-content"
                >
                  <div
                    class="card-body"
                  >
                    <p
                      class="flex"
                    >
                      <span
                        class="font-semibold"
                      >
                        Species:
                      </span>
                      <span
                        class="ml-auto text-right"
                      >
                        Calathea
                      </span>
                    </p>
                    <p
                      class="flex"
                    >
                      <span
                        class="font-semibold"
                      >
                        Pot size:
                      </span>
                      <span
                        class="ml-auto text-right"
                      >
                        4
                      </span>
                    </p>
                    <div
                      class="text-center"
                    >
                      <p
                        class="font-semibold mt-3"
                      >
                        Description:
                      </p>
                      <p
                        class="text-sm line-clamp-6"
                      >
                        This is a plant with a long description
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="justify-end min-w-12"
          />
        </div>
        <div
          class="flex flex-col gap-8 text-center my-auto"
        >
          <p
            class="text-lg font-bold"
          >
            Is this the new QR code for your 
            plant
            ?
          </p>
          <div
            class="mx-auto p-4 bg-base-200 rounded-3xl"
          >
            <img
              class="max-h-[50vh] rounded-xl object-contain"
              src="/media/thumbnails/photo_thumb.jpg"
            />
          </div>
          <div
            class="flex gap-4 mx-auto mb-8"
          >
            <button
              class="btn btn-error btn-square text-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark h-6 w-6"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              class="btn btn-success btn-square text-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check h-6 w-6"
                data-icon="check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <dialog
        class="modal"
      >
        <div
          class="modal-box text-center flex flex-col pt-4 "
        >
          <form
            method="dialog"
          >
            <button
              class="btn-close absolute right-4 top-4"
            >
              <svg
                aria-hidden="true"
                class="w-8 h-8"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
                />
              </svg>
            </button>
          </form>
        </div>
        <form
          class="modal-backdrop"
          method="dialog"
        >
          <button>
            close
          </button>
        </form>
      </dialog>
    </div>
  </body>,
  "container": <div>
    <div
      class="container flex flex-col mx-auto h-screen"
    >
      <div
        class="navbar bg-base-100 mb-4 sticky top-0 z-[99]"
      >
        <div
          class="dropdown justify-start min-w-12"
        >
          <div
            class="btn btn-ghost btn-circle"
            role="button"
            tabindex="0"
          >
            <svg
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <ul
            class="menu menu-md dropdown-content mt-3 z-[99]
                                p-2 shadow bg-base-300 rounded-box w-52"
            tabindex="0"
          >
            <li>
              <a>
                Overview
              </a>
            </li>
            <li>
              <a>
                Light mode
              </a>
            </li>
          </ul>
        </div>
        <div
          class="mx-auto shrink min-w-0"
        >
          <div
            class="dropdown dropdown-center w-full"
          >
            <a
              class="btn btn-ghost w-full px-0 text-nowrap"
              role="button"
              tabindex="0"
            >
              <span
                class="px-4 leading-[2.75rem] truncate"
                style="font-size: 14px;"
              >
                Test Plant
              </span>
            </a>
            <div
              class="dropdown-content z-[1] flex"
              tabindex="0"
            >
              <div
                class="card card-compact w-72 p-2 mt-2 mx-auto
                                     shadow bg-neutral text-neutral-content"
              >
                <div
                  class="card-body"
                >
                  <p
                    class="flex"
                  >
                    <span
                      class="font-semibold"
                    >
                      Species:
                    </span>
                    <span
                      class="ml-auto text-right"
                    >
                      Calathea
                    </span>
                  </p>
                  <p
                    class="flex"
                  >
                    <span
                      class="font-semibold"
                    >
                      Pot size:
                    </span>
                    <span
                      class="ml-auto text-right"
                    >
                      4
                    </span>
                  </p>
                  <div
                    class="text-center"
                  >
                    <p
                      class="font-semibold mt-3"
                    >
                      Description:
                    </p>
                    <p
                      class="text-sm line-clamp-6"
                    >
                      This is a plant with a long description
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="justify-end min-w-12"
        />
      </div>
      <div
        class="flex flex-col gap-8 text-center my-auto"
      >
        <p
          class="text-lg font-bold"
        >
          Is this the new QR code for your 
          plant
          ?
        </p>
        <div
          class="mx-auto p-4 bg-base-200 rounded-3xl"
        >
          <img
            class="max-h-[50vh] rounded-xl object-contain"
            src="/media/thumbnails/photo_thumb.jpg"
          />
        </div>
        <div
          class="flex gap-4 mx-auto mb-8"
        >
          <button
            class="btn btn-error btn-square text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark h-6 w-6"
              data-icon="xmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            class="btn btn-success btn-square text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-check h-6 w-6"
              data-icon="check"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="w-8 h-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
